fixed alignment for logos for MD screens

--- a/css/style.css
+++ b/css/style.css
@@ -559,6 +559,11 @@ video {
   margin-bottom: -0.5rem;
 }
 
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .mb-2 {
   margin-bottom: 0.5rem;
 }
@@ -615,6 +620,10 @@ video {
   justify-content: flex-start;
 }
 
+.justify-center {
+  justify-content: center;
+}
+
 .justify-between {
   justify-content: space-between;
 }
@@ -641,6 +650,10 @@ video {
 
 .border-2 {
   border-width: 2px;
+}
+
+.border-4 {
+  border-width: 4px;
 }
 
 .border-MediumGray {
@@ -753,6 +766,12 @@ video {
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
+@media (min-width: 768px) {
+  .md\:gap-8 {
+    gap: 2rem;
+  }
+}
+
 @media (min-width: 1024px) {
   .lg\:mb-12 {
     margin-bottom: 3rem;
@@ -804,6 +823,10 @@ video {
 
   .lg\:flex-row-reverse {
     flex-direction: row-reverse;
+  }
+
+  .lg\:justify-start {
+    justify-content: flex-start;
   }
 
   .lg\:gap-12 {
